Summary of important user-visible changes for linear-algebra 2.2.1:
-------------------------------------------------------------------

 ** fixed bugs:
      nmf_pg doesn't use text_waitbar by default. Miscellanoues package is
      not required.

      nmf_bpas now respects the verbose option

 ** Makefile fixed to work with non-standard linker options e.g on
    Apple.

Summary of important user-visible changes for linear-algebra 2.2.0:
-------------------------------------------------------------------

 ** The following functions are new in 2.2.0:

      circulant_eig     circulant_inv     circulant_make_matrix
      circulant_matrix_vector_product
      nmf_pg     nmf_bpas

 ** Package is now dependent on general (>= 1.3.0)

 ** Package is no longer automatically loaded.

Summary of important user-visible changes for linear-algebra 2.1.0:
-------------------------------------------------------------------

 ** The following functions are new in 2.1.0:

      lobpcg  ndcovlt

 ** The following functions were removed since equivalents are now
    part of GNU octave core:

      bicg  mgorth

 ** The following functions were deprecated since equivalents are
    now part of GNU octave core:

      pgmres

 ** The function `funm' now also accepts function handles.

 ** Help text of most functions has been improved.